...
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="profileEditButton"/>
                                        <state key="normal" title="フォロー"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                    </button>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xnf-Iu-OEq">
                                        <accessibility key="accessibilityConfiguration" identifier="profileImage"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="xnf-Iu-OEq" secondAttribute="height" multiplier="1:1" id="MYE-u1-DWU"/>
...
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1qL-Po-6Tv" userLabel="FollowingButton">
                                        <accessibility key="accessibilityConfiguration" identifier="profileFollowingCountButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                        <connections>
...
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mQj-hl-Bd0" userLabel="FollowersButton">
                                        <accessibility key="accessibilityConfiguration" identifier="profileFollowersCountButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                        <connections>
...
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="siK-Xr-AGZ">
                                        <accessibility key="accessibilityConfiguration" identifier="profileMicropostsCountLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="プロフィール" id="LW0-wT-rEs"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
...
