...
                    var title = "フォロー"
                    switch response {
                    case .Success(let following):
                        following?.forEach() { followedByMe in
                            if(followedByMe.id == user.id){
                                self.isFollowedByMe = true
                                title = "アンフォロー"
                                return
                            }
                        }
                        self.button.setTitle(title, for: UIControlState.normal)
                    default: break
                    }
...
